[package]
name = "font_metrics"
version = "0.0.3"
authors = ["Jack Willis <jack@attac.us>"]
license = "GPL-3.0"
description = "binaries for measuring TrueType fonts"

[dependencies]
clap = "2.31"
lopdf = "0.15"
num-rational = "0.1"
pdf-extract = "0.4"
rusttype = "0.6"
tempdir = "0.3"

[lib]
name = "font_metrics"
path = "src/lib.rs"

[[bin]]
name = "fm-xheight"
path = "bin/fm-xheight.rs"

[[bin]]
name = "fm-cpp"
path = "bin/fm-cpp.rs"

[[bin]]
name = "fm-density"
path = "bin/fm-density.rs"