[package]
name = "font_metrics"
version = "0.0.4"
authors = ["Jack Willis <jack@attac.us>"]
license = "GPL-3.0"
description = "Provides binaries (fm-cpp, fm-density, fm-xheight) for measuring TrueType fonts."
documentation = "https://docs.rs/font_metrics/"
repository = "https://github.com/jackwillis/font-metrics/"

[dependencies]
clap = "2.31"
lopdf = "0.15"
num-rational = "0.1"
pdf-extract = "0.4"
rusttype = "0.6"
tempdir = "0.3"

[[bin]]
name = "fm-xheight"
path = "bin/fm-xheight.rs"

[[bin]]
name = "fm-cpp"
path = "bin/fm-cpp.rs"

[[bin]]
name = "fm-density"
path = "bin/fm-density.rs"